# sami

./: .gitignore  Cargo.toml  README.md  run_back.sh  run_front.sh
backdoor/: Cargo.toml  Dockerfile
backdoor/src/: common.rs  database.rs  library.rs  main.rs  routes.rs
backdoor/src/common/: error.rs  read_env.rs  responder.rs  validator.rs
backdoor/src/common/auth_helper/: auth.rs  validator.rs
backdoor/src/database/: article.rs  statements.rs  users.rs
frontdoor/: package-lock.json  package.json
frontdoor/app/: root.tsx  tailwind.css
frontdoor/app/components/: layout.tsx
frontdoor/app/components/common/: Articles.tsx  Footer.tsx  Header.tsx  Tags.tsx
frontdoor/app/routes/: $article.tsx  index.tsx
frontdoor/app/routes/a/: auth.tsx
frontdoor/app/routes/article/: messenger.tsx
frontdoor/app/styles/: app.css
frontdoor/public/: fonts.css
src/: common.rs  database.rs  library.rs  main.rs  utils.rs
src/common/: error.rs  read_env.rs  responder.rs
src/common/src/: main.rs
src/database/: connect.rs  statements.rs  users.rs
src/utils/: error.rs  logger.rs  read_env.rs  validator.rs
