[package]
name = "sami_rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio-postgres ={version = "*", features = ['with-chrono-0_4', "with-serde_json-1"]}
tokio = { version = "1.18.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
derive_more = "*"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.9.0"
regex = "*"
scrypt = "0.10.0"
log = "0.4.17"
dotenv = "0.15.0"
actix-web-httpauth = "0.6.0"
alcoholic_jwt = "*"
reqwest = { version = "0.11", features = ["json"] }
actix-cors = "*"
actix-identity = "0.4.0"
actix-session = { version = "0.6.2", features = ["cookie-session"] }